# fractal

./: Cargo.toml  LICENSE  README.md  deploy.sh  fractal.d.ts  fractal.js  fractal_bg.wasm  fractal_bg.wasm.d.ts  index.html  index.js  package.json
snippets/fractal-e93cbb474aa8d6bf/: inline0.js
src/: color_picker.rs  fractal.rs  fractal_widget.rs  image_utils.rs  main.rs  progress_bar.rs  renderer.rs  stack_widget.rs  time.rs
src/web/: index.js
